<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${relativePackage}.${activityClass}" >

     <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/app_bottom_height"
        android:orientation="vertical"
        android:paddingLeft="@dimen/body_padding_left"
        android:paddingRight="@dimen/body_padding_right" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp" ><!-- #F5F1E6 -->

            <Button
                android:id="@+id/buttonScan"
                android:layout_width="46dp"
                android:layout_height="38dp"
				android:layout_marginLeft="14dp"
				android:layout_marginRight="20dp"
				android:layout_marginTop="6dp"
                android:background="@drawable/scan"
                />

            <RelativeLayout
                android:layout_width="440dp"
                android:layout_height="50dp"
              
                 >

                <EditText
                    android:id="@+id/editSearch"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingLeft="10dp"
                    android:ems="10"
                    android:hint="@string/culvert_search_hint" >
                </EditText>

                <requestFocus />

                <ImageView
                    android:id="@+id/imageClear"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="7dp"
                    android:layout_alignParentRight="true"
                    android:src="@android:drawable/ic_menu_close_clear_cancel" />
            </RelativeLayout>

            <Button
                android:id="@+id/buttonSearch"
                android:layout_width="33dp"
                android:layout_height="33dp"
           		android:layout_marginRight="22dp"
           		android:layout_marginLeft="25dp"
           		android:layout_gravity="center"
           		android:background="@drawable/btn_search"
                />
        </LinearLayout>
        

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" 
            android:background="#DDDDDD">

            <View
                android:layout_width="0.5px"
                android:layout_height="fill_parent"
                android:background="#B8B8B8"
                android:visibility="visible" />

            <TextView
                android:id="@+id/culvertCode"
                android:layout_width="0dp"
                android:layout_height="@dimen/list_item_height"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/culvertCode"
                android:textColor="#000000"
                android:textSize="@dimen/list_text_size" />

            <View
                android:layout_width="0.5px"
                android:layout_height="fill_parent"
                android:background="#B8B8B8"
                android:visibility="visible" />

            <TextView
                android:id="@+id/culvertName"
                android:layout_width="0dp"
                android:layout_height="@dimen/list_item_height"
                android:layout_weight="2"
                android:gravity="center"
                android:textColor="#000000"
                android:text="@string/culvertName"
                android:textSize="@dimen/list_text_size" />

            <View
                android:layout_width="0.5px"
                android:layout_height="fill_parent"
                android:background="#B8B8B8"
                android:visibility="visible" />

            <TextView
                android:id="@+id/lineNumber"
                android:layout_width="0dp"
                android:layout_height="@dimen/list_item_height"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/lineNumber"
                android:textColor="#000000"
                android:textSize="@dimen/list_text_size" />

            <View
                android:layout_width="0.5px"
                android:layout_height="fill_parent"
                android:background="#B8B8B8"
                android:visibility="visible" />

           

            <TextView
                android:id="@+id/locationName"
                android:layout_width="0dp"
                android:layout_height="@dimen/list_item_height"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/locationName"
                android:textColor="#000000"
                android:textSize="@dimen/list_text_size" />

            <View
                android:layout_width="0.5px"
                android:layout_height="fill_parent"
                android:background="#B8B8B8"
                android:visibility="visible" />
        </LinearLayout>

        <ListView
            android:id="@+id/listViewCulvertInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
        </ListView>
    </LinearLayout>

    <include layout="@layout/app_bottom" />


</RelativeLayout>
